# tflows.py

./: License  NOTICE  README.md  pyproject.toml
examples/: basic_bot.py
tflow/: bot.py  builtins.py  engine.py  functions.py
tflow.egg-info/: PKG-INFO  SOURCES.txt
tflows/: __init__.py  bot.py  builtins.py  engine.py  loader.py  registry.py
tflows.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tflows/function/: avatar.py  embed.py  guild.py  id.py  image.py  membercount.py  ping.py  send.py  time.py  uptime.py
