[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tflows"
version = "0.0.2"
description = "Simple automation and bot framework inspired by aoi.js style syntax"
authors = [{ name="Tonie" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "discord.py"
]

[tool.setuptools]
packages = ["tflows"]