[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tflows"
version = "0.0.3"
description = "A lightweight automation and Discord bot framework that lets you build bots using a simple scripting system."
authors = [{ name="Tonie" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "discord.py"
]

[tool.setuptools]
packages = ["tflows"]