[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tflows"
version = "0.0.8"
description = "A lightweight automation and Discord bot framework that lets you build bots using a simple scripting system."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

authors = [
  { name = "Tonie" }
]

keywords = [
  "discord",
  "bot",
  "automation",
  "scripting",
  "framework",
  "discord-bot"
]

dependencies = [
  "discord.py>=2.3.0"
]

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Communications :: Chat",
  "Topic :: Software Development :: Libraries :: Application Frameworks"
]

[project.urls]
Homepage = "https://github.com/toniec/tflows"
Repository = "https://github.com/toniec/tflows"
Issues = "https://github.com/toniec/tflows/issues"
Documentation = "https://toniec.github.io/tflows"
Discord = "https://discord.gg/CMSXnfcCJW"

[project.optional-dependencies]
dev = [
  "pytest",
  "black",
  "ruff"
]

[tool.setuptools]
packages = ["tflows"]